- Se añade un nuevo mensaje en la pantalla "Permissions", mostrándose solamente si te tiene el rol "admin" asignado.

--- a/app/src/app/routes/permissions/permissions.component.html
+++ b/app/src/app/routes/permissions/permissions.component.html
@@ -12,4 +12,8 @@
     <ng-template permissions [ngxPermissionsOnly]="['permissions/delete']">
         <p>Tienes el permiso "permissions/delete" asignado.</p>
     </ng-template>
+
+    <ng-template permissions [ngxPermissionsOnly]="['admin']">
+        <p>Tienes el rol "admin" asignado.</p>
+    </ng-template>
 </div>
